--- a/index-2.html
+++ b/index-2.html
@@ -133,7 +133,8 @@
     </div>
 <!-- Header End -->
 <!-- Section : About -->
-				<section id="about" class="section about-style2">
+					<audio src="img/getNaked.mp3"  onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 8000)">
+					</audio>
 					<div class="container">
 
 						<div class="section-title" >
@@ -162,7 +163,7 @@
 									</div> <!-- end .info-title -->
 									<div class="info-details">
 										<p>: 09-04-1992</p>
-										<p>: +0434126435</p>
+										<p>: +126435</p>
 										<p>: thetjsmtudios@gmail.com</p>
 										<p>: definitelynotspam.com</p>
 										<p>: Somewhere over the rainbow<br>  3000, Austraila</p>
