--- a/index-2.html
+++ b/index-2.html
@@ -681,7 +681,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -697,7 +697,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -713,7 +713,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -729,7 +729,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -761,7 +761,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -777,7 +777,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>Squared icon set design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -793,7 +793,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
@@ -809,7 +809,7 @@
 				                                        <div class="overlay">
 				                                            <div class="details">
 				                                                <h2>portfolio title design</h2>
-				                                                <p>developed for <span>Envato</span></p>
+				                                                <p>developed for <span>internetz</span></p>
 				                                            </div>
 				                                        </div>
 				                                    </a>
