--- a/index-2.html
+++ b/index-2.html
@@ -137,7 +137,7 @@
 					</audio>
 					<div class="container">
 
-						<div class="section-title" >
+						<div class="section-title" id="about" >
 							<h2>About me</h2>
 							<span class="border"></span>
 								<p>
