--- a/index-2.html
+++ b/index-2.html
@@ -133,7 +133,7 @@
     </div>
 <!-- Header End -->
 <!-- Section : About -->
-					<audio src="img/getNaked.mp3"  onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 8000)">
+					<audio src="img/getNaked.mp3" >
 					</audio>
 					<div class="container">
 
@@ -416,7 +416,7 @@
 							<div class="col-xs-6 col-sm-6 col-md-3 single">
 								<div class="total-numbers" data-perc="1300">
 									<div class="iconspace"><i class="cicon fa-trophy"></i></div>
-									<span class="sum">31</span>
+									<span class="sum">101</span>
 									Awards Won
 								</div><!-- end .total-numbers -->
 							</div><!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -584,9 +584,7 @@
   					<div class="title">
 						<h1>Work Process</h1>
   					</div><!-- end .title -->
-
-  				<div class="row">
-             				<div class="col-xs-6 col-sm-4 col-md-2">
+										<div class="col-xs-6 col-sm-4 col-md-2">
                                 <div class="work_process">
                                     <div class="work_process-box">
                                         <i class="icon-lamp"></i>
@@ -641,6 +639,9 @@
                             </div><!-- end .col-xs-6 .col-sm-4 .col-md-2 -->
 
 				</div><!-- end .row -->
+					<video src="apple.mp4" autoplay poster="">
+
+					</video>
   			</div><!-- end .container -->
   		</div><!-- end .parallax-overlay-2 -->
  	</div>
