--- a/index-2.html
+++ b/index-2.html
@@ -637,11 +637,11 @@
                                     </div><!-- end .work_process-box -->
                                 </div><!-- end .work_process -->
                             </div><!-- end .col-xs-6 .col-sm-4 .col-md-2 -->
+															<div id="work" class="col-xs-6 col-sm-6 col-md-6">
+																<h3>TEST</h3>
+															</div>
 
-				</div><!-- end .row -->
-					<video src="apple.mp4" autoplay poster="">
-
-					</video>
+			</div><!-- end .row -->
   			</div><!-- end .container -->
   		</div><!-- end .parallax-overlay-2 -->
  	</div>
